<resources>
    <string name="app_name">Jiu Jitsu Syllabus</string>

    <string name="anklelock_label">Ankle Lock</string>
    <string name="armlock_label">Arm Lock</string>
    <string name="armlockcounter_label">Arm Lock Counter</string>
    <string name="fingerlock_label">Finger Lock</string>
    <string name="fingerlockapplication_label">Finger Lock Application</string>
    <string name="groundwork_label">Ground Work</string>
    <string name="kata_label">Kata</string>
    <string name="kyusho_label">Kyusho</string>
    <string name="leglock_label">Leg Lock</string>
    <string name="leglockcounter_label">Leg Lock Counter</string>
    <string name="necklock_label">Neck Lock</string>
    <string name="throw_label">Throw</string>
    <string name="wristlock_label">Wrist Lock</string>

    <string name="new_throw">New Throw</string>
    <string name="new_anklelock">New Ankle Lock</string>
    <string name="new_armlock">New Arm Lock</string>
    <string name="new_armlockcounter">New Arm Lock Counter</string>
    <string name="new_fingerlock">New Finger Lock</string>
    <string name="new_fingerlockapplication">New Finger Lock Application</string>
    <string name="new_groundwork">New Ground Work</string>
    <string name="new_kata">New Kata</string>
    <string name="new_kyusho">New Kyusho</string>
    <string name="new_leglock">New Leg Lock</string>
    <string name="new_leglockcounter">New Leg Lock Counter</string>
    <string name="new_necklock">New Neck Lock</string>
    <string name="new_wristlock">New Wrist Lock</string>

    <string name="throw_created">Throw Created</string>
    <string name="anklelock_created">Ankle Lock Created</string>
    <string name="armlock_created">Arm Lock Created</string>
    <string name="armlockcounter_created">Arm Lock Counter Created</string>
    <string name="fingerlock_created">Finger Lock Created</string>
    <string name="fingerlockapplication_created">Finger Lock Application Created</string>
    <string name="groundwork_created">Ground Work Created</string>
    <string name="kata_created">Kata Created</string>
    <string name="kyusho_created">Kyusho Created</string>
    <string name="leglock_created">Leg Lock Created</string>
    <string name="leglockcounter_created">Leg Lock Counter Created</string>
    <string name="necklock_created">Neck Lock Created</string>
    <string name="wristlock_created">Wrist Lock Created</string>

    <string name="throw_updated">Throw Updated</string>
    <string name="anklelock_updated">Ankle Lock Updated</string>
    <string name="armlock_updated">Arm Lock Updated</string>
    <string name="armlockcounter_updated">Arm Lock Counter Updated</string>
    <string name="fingerlock_updated">Finger Lock Updated</string>
    <string name="fingerlockapplication_updated">Finger Lock Application Updated</string>
    <string name="groundwork_updated">Ground Work Updated</string>
    <string name="kata_updated">Kata Updated</string>
    <string name="kyusho_updated">Kyusho Updated</string>
    <string name="leglock_updated">Leg Lock Updated</string>
    <string name="leglockcounter_updated">Leg Lock Counter Updated</string>
    <string name="necklock_updated">Neck Lock Updated</string>
    <string name="wristlock_updated">Wrist Lock Updated</string>

    <string name="button_all_grade">List All</string>
    <string name="button_anklelock_grade">List Ankle Locks</string>
    <string name="button_armlock_grade">List Arm Locks</string>
    <string name="button_armlockcounter_grade">List Arm Lock Counters</string>
    <string name="button_fingerlock_grade">List Finger Locks</string>
    <string name="button_fingerlockapplication_grade">List Finger Lock Applications</string>
    <string name="button_groundwork_grade">List Ground Work</string>
    <string name="button_kata_grade">List Kata</string>
    <string name="button_kyusho_grade">List kyusho</string>
    <string name="button_leglock_grade">List Leg Locks</string>
    <string name="button_leglockcounter_grade">List Leg Lock Counters</string>
    <string name="button_necklock_grade">List Neck Locks</string>
    <string name="button_throw_grade">List throws</string>
    <string name="button_wristlock_grade">List Wrist Locks</string>
    <string name="button_new_throw">New Throw</string>

    <string name="button_randomise">Randomise</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="name_label">Name: </string>
    <string name="number_label">Number: </string>
    <string name="details_label">Details</string>
    <string name="translation_label">Translation: </string>
    <string name="grade_label">Grade: </string>
    <string name="entrance_label">Entrance: </string>
    <string name="start_position_label">Start position: </string>
    <string name="description_label">Description: </string>
    <string name="description_kata_label">Description: (separate steps with new line)</string>
    <string name="steps_label">Steps:</string>
    <string name="action_settings">Settings</string>

    <string name="db_export">Export DB</string>
    <string name="db_import">Import DB</string>
    <string name="debug">Debug</string>

</resources>
