<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="jitsu.ben.uk.consumerest.MainActivity">

        <ScrollView
            android:id="@+id/throw_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinner_grade_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toLeftOf="@+id/button_all_grade" />

                <Button
                    android:id="@+id/button_all_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/spinner_grade_all"
                    android:onClick="openAllByGrade"
                    android:text="@string/button_all_grade" />

                <Spinner
                    android:id="@+id/spinner_grade_throw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignRight="@+id/spinner_grade_all"
                    android:layout_below="@+id/button_all_grade" />

                <Button
                    android:id="@+id/button_throw_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/button_all_grade"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/spinner_grade_throw"
                    android:onClick="openThrowsByGrade"
                    android:text="@string/button_throw_grade" />

                <Spinner
                    android:id="@+id/spinner_grade_kyusho"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignRight="@+id/spinner_grade_throw"
                    android:layout_below="@+id/button_throw_grade" />

                <Button
                    android:id="@+id/button_kyusho_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/button_throw_grade"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/spinner_grade_kyusho"
                    android:onClick="openKyushoByGrade"
                    android:text="@string/button_kyusho_grade" />

                <Spinner
                    android:id="@+id/spinner_grade_kata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignRight="@+id/spinner_grade_throw"
                    android:layout_below="@+id/button_kyusho_grade" />

                <Button
                    android:id="@+id/button_kata_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/button_throw_grade"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/spinner_grade_kata"
                    android:onClick="openKataByGrade"
                    android:text="@string/button_kata_grade" />

                <Spinner
                    android:id="@+id/spinner_grade_groundwork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignRight="@+id/spinner_grade_throw"
                    android:layout_below="@+id/button_kata_grade" />

                <Button
                    android:id="@+id/button_groundwork_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/button_throw_grade"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/spinner_grade_groundwork"
                    android:onClick="openGroundWorkByGrade"
                    android:text="@string/button_groundwork_grade" />

                <Spinner
                    android:id="@+id/spinner_grade_armlock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignRight="@+id/spinner_grade_throw"
                    android:layout_below="@+id/button_groundwork_grade" />

                <Button
                    android:id="@+id/button_armlock_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/button_throw_grade"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/spinner_grade_armlock"
                    android:onClick="openArmLockByGrade"
                    android:text="@string/button_armlock_grade" />

                <Spinner
                    android:id="@+id/spinner_grade_wristlock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignRight="@+id/spinner_grade_throw"
                    android:layout_below="@+id/button_armlock_grade" />

                <Button
                    android:id="@+id/button_wristlock_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/button_throw_grade"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/spinner_grade_wristlock"
                    android:onClick="openWristLockByGrade"
                    android:text="@string/button_wristlock_grade" />

                <Spinner
                    android:id="@+id/spinner_grade_leglock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignRight="@+id/spinner_grade_throw"
                    android:layout_below="@+id/button_wristlock_grade" />

                <Button
                    android:id="@+id/button_leglock_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/button_throw_grade"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/spinner_grade_leglock"
                    android:onClick="openLegLockByGrade"
                    android:text="@string/button_leglock_grade" />

                <Spinner
                    android:id="@+id/spinner_grade_anklelock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignRight="@+id/spinner_grade_throw"
                    android:layout_below="@+id/button_leglock_grade" />

                <Button
                    android:id="@+id/button_anklelock_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/button_throw_grade"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/spinner_grade_anklelock"
                    android:onClick="openAnkleLockByGrade"
                    android:text="@string/button_anklelock_grade" />

                <Spinner
                    android:id="@+id/spinner_grade_necklock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignRight="@+id/spinner_grade_throw"
                    android:layout_below="@+id/button_anklelock_grade" />

                <Button
                    android:id="@+id/button_necklock_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/button_throw_grade"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/spinner_grade_necklock"
                    android:onClick="openNeckLockByGrade"
                    android:text="@string/button_necklock_grade" />

                <Spinner
                    android:id="@+id/spinner_grade_fingerlock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignRight="@+id/spinner_grade_throw"
                    android:layout_below="@+id/button_necklock_grade" />

                <Button
                    android:id="@+id/button_fingerlock_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/button_throw_grade"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/spinner_grade_fingerlock"
                    android:onClick="openFingerLockByGrade"
                    android:text="@string/button_fingerlock_grade" />

                <Spinner
                    android:id="@+id/spinner_grade_armlockcounter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignRight="@+id/spinner_grade_throw"
                    android:layout_below="@+id/button_fingerlock_grade" />

                <Button
                    android:id="@+id/button_armlockcounter_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/button_throw_grade"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/spinner_grade_armlockcounter"
                    android:onClick="openArmLockCounterByGrade"
                    android:text="@string/button_armlockcounter_grade" />

                <Spinner
                    android:id="@+id/spinner_grade_leglockcounter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignRight="@+id/spinner_grade_throw"
                    android:layout_below="@+id/button_armlockcounter_grade" />

                <Button
                    android:id="@+id/button_leglockcounter_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/button_throw_grade"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/spinner_grade_leglockcounter"
                    android:onClick="openLegLockCounterByGrade"
                    android:text="@string/button_leglockcounter_grade" />

                <Spinner
                    android:id="@+id/spinner_grade_fingerlockapplication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignRight="@+id/spinner_grade_throw"
                    android:layout_below="@+id/button_leglockcounter_grade" />

                <Button
                    android:id="@+id/button_fingerlockapplication_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/button_throw_grade"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/spinner_grade_fingerlockapplication"
                    android:onClick="openFingerLockApplicationByGrade"
                    android:text="@string/button_fingerlockapplication_grade" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/button_fingerlock_grade"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/button_db_export"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:onClick="exportDB"
                        android:text="@string/db_export" />

                    <Button
                        android:id="@+id/button_db_import"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_alignParentBottom="true"
                        android:layout_toEndOf="@+id/button_db_export"
                        android:onClick="importDB"
                        android:text="@string/db_import" />

                    <Button
                        android:id="@+id/button_debug"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_alignParentBottom="true"
                        android:layout_toEndOf="@+id/button_db_import"
                        android:onClick="debug"
                        android:text="@string/debug" />
                </LinearLayout>

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view" />
</android.support.v4.widget.DrawerLayout>