<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_kata"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jitsu.ben.uk.consumerest.activity.NewKata">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/name_label"
                android:ems="10"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:id="@+id/new_kata_name"
                android:layout_toStartOf="@+id/new_kata_button" />

            <EditText
                android:text=""
                android:hint="@string/translation_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_below="@+id/new_kata_name"
                android:ems="10"
                android:layout_alignParentStart="true"
                android:id="@+id/new_kata_translation"
                android:layout_alignParentEnd="true"/>

            <Spinner
                android:id="@+id/new_kata_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/new_kata_translation"
                android:layout_alignParentEnd="true"/>


            <EditText
                android:text=""
                android:hint="@string/description_kata_label"
                android:ems="10"
                android:inputType="textCapSentences|textMultiLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_kata_grade"
                android:layout_alignParentStart="true"
                android:id="@+id/new_kata_description"
                android:layout_alignParentEnd="true" />

            <Button
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:onClick="save"
                android:id="@+id/new_kata_button" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
